--- a/.editorconfig
+++ b/.editorconfig
@@ -3,8 +3,8 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-insert_final_newline = true
-indent_style = space
+insert_final_newline = false
+indent_style = tab
 indent_size = 4
 trim_trailing_whitespace = true
 
@@ -12,7 +12,5 @@ trim_trailing_whitespace = true
 trim_trailing_whitespace = false
 
 [*.{yml,yaml}]
+indent_style = space
 indent_size = 2
-
-[docker-compose.yml]
-indent_size = 4
