--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
 	"private": true,
 	"scripts": {
-		"watch": "mix watch",
-		"watch-poll": "mix watch -- --watch-options-poll=1000",
-		"hot": "mix watch --hot",
-		"prod": "npm run production",
-		"production": "mix --production",
+		"build": "mix --production",
 		"dev": "node ./dev-server.js"
 	},
 	"devDependencies": {
 		"axios": "^0.25",
 		"browser-sync": "^2.27.10",
 		"browser-sync-webpack-plugin": "^2.3.0",
-		"laravel-mix": "^6.0.6",
-		"lodash": "^4.17.19",
-		"nodemon": "^2.0.16",
-		"postcss": "^8.1.14",
-		"resolve-url-loader": "^5.0.0",
-		"sass": "^1.51.0",
-		"sass-loader": "^12.6.0"
-	},
-	"dependencies": {
 		"chalk": "^4.1.2",
-		"dotenv": "^16.0.1"
+		"dotenv": "^16.0.1",
+		"laravel-mix": "^6.0.6",
+		"resolve-url-loader": "^3.1.2",
+		"sass": "^1.32.11",
+		"sass-loader": "^11.0.1",
+		"vue": "^2.6.12",
+		"vue-loader": "^15.9.8",
+		"vue-template-compiler": "^2.6.12"
 	}
 }
