--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"chalk": "^4.1.2",
 		"dotenv": "^16.0.1",
 		"laravel-mix": "^6.0.6",
+		"normalize.css": "^8.0.1",
 		"resolve-url-loader": "^3.1.2",
 		"sass": "^1.32.11",
 		"sass-loader": "^11.0.1",
