--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
 	},
 	"devDependencies": {
 		"axios": "^0.25",
-		"browser-sync": "^2.27.10",
-		"browser-sync-webpack-plugin": "^2.3.0",
 		"chalk": "^4.1.2",
 		"dotenv": "^16.0.1",
 		"laravel-mix": "^6.0.6",
 		"normalize.css": "^8.0.1",
 		"resolve-url-loader": "^3.1.2",
+		"sanitize-html": "^2.7.0",
 		"sass": "^1.32.11",
 		"sass-loader": "^11.0.1",
 		"vue": "^2.6.12",
 		"vue-loader": "^15.9.8",
+		"vue-router": "^3.5.4",
 		"vue-template-compiler": "^2.6.12"
 	}
 }
