--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,16 @@
 	},
 	"require-dev": {
 		"fakerphp/faker": "^1.9.1",
-		"laravel/sail": "^1.0.1",
+		"laravel/sail": "^1.14",
 		"mockery/mockery": "^1.4.4",
 		"nunomaduro/collision": "^6.1",
 		"phpunit/phpunit": "^9.5.10",
 		"spatie/laravel-ignition": "^1.0"
 	},
 	"autoload": {
+		"files": [
+			"bootstrap/helpers.php"
+		],
 		"psr-4": {
 			"App\\": "app/",
 			"Database\\Factories\\": "database/factories/",
