--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,68 @@
+# For more information: https://laravel.com/docs/sail
+version: '3'
 services:
-  db:
-    image: mariadb
-    environment:
-      MARIADB_ROOT_PASSWORD: cartridge
-      MARIADB_DATABASE: ${DB_DATABASE}
-      MARIADB_USER: ${DB_USERNAME}
-      MARIADB_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - ${DB_PORT}:3306
-    volumes:
-      - db:/var/lib/mysql
-  adminer:
-    image: adminer
-    ports:
-      - ${ADMINER_PORT}:8080
-  meilisearch:
-    image: getmeili/meilisearch
-    ports:
-      - ${MEILISEARCH_PORT}:7700
-    volumes:
-      - meilisearch:/var/lib/mysql
+    laravel.test:
+        build:
+            context: ./vendor/laravel/sail/runtimes/8.1
+            dockerfile: Dockerfile
+            args:
+                WWWGROUP: '${APP_GID:-1000}'
+        image: sail-8.1/app
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
+        ports:
+            - '${APP_PORT:-80}:80'
+            - '${HMR_PORT:-8080}:8080'
+        environment:
+            WWWUSER: '${APP_UID:-1000}'
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+        volumes:
+            - '.:/var/www/html'
+            - '${GAMES_PATH}:/games:ro'
+        networks:
+            - sail
+        depends_on:
+            - mariadb
+            - meilisearch
+    db:
+        image: 'mariadb:10'
+        ports:
+            - '${DB_PORT:-3306}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD:-cartridge}'
+            MYSQL_ROOT_HOST: "%"
+            MYSQL_DATABASE: '${DB_DATABASE:-cartridge}'
+            MYSQL_USER: '${DB_USERNAME:-cartridge}'
+            MYSQL_PASSWORD: '${DB_PASSWORD:-cartridge}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+        volumes:
+            - 'sail-mariadb:/var/lib/mysql'
+            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+        networks:
+            - sail
+        healthcheck:
+            test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD:-cartridge}"]
+            retries: 3
+            timeout: 5s
+    meilisearch:
+        image: 'getmeili/meilisearch:latest'
+        ports:
+            - '${MEILISEARCH_PORT:-7700}:7700'
+        volumes:
+            - 'sail-meilisearch:/meili_data'
+        networks:
+            - sail
+        healthcheck:
+            test: ["CMD", "wget", "--no-verbose", "--spider",  "http://localhost:7700/health"]
+            retries: 3
+            timeout: 5s
+networks:
+    sail:
+        driver: bridge
 volumes:
-  db:
-  meilisearch:
+    sail-mariadb:
+        driver: local
+    sail-meilisearch:
+        driver: local
