--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"axios": "^0.25",
 		"chalk": "^4.1.2",
 		"dotenv": "^16.0.1",
+		"feather-icons": "^4.29.0",
 		"laravel-mix": "^6.0.6",
 		"normalize.css": "^8.0.1",
 		"resolve-url-loader": "^3.1.2",
@@ -18,6 +19,7 @@
 		"sass": "^1.32.11",
 		"sass-loader": "^11.0.1",
 		"vue": "^2.6.12",
+		"vue-feather": "^1.1.1",
 		"vue-inline-svg": "^2.1.0",
 		"vue-loader": "^15.9.8",
 		"vue-router": "^3.5.4",
